--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,9 @@ a {
   cursor: pointer;
   width: 200px;
   height: 50px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button1:hover,
 .button1:focus {
@@ -467,12 +469,14 @@ button:focus {
   margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.14;
+  text-transform: uppercase;
 }
 .social-footer {
   margin-left: 70px;
+  margin-right: 78px;
 }
 .back-icon-footer {
-  box-sizing: border-box;
+  box-sizing: form-box;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -502,7 +506,6 @@ button:focus {
   background-color: var(--background-color);
   display: flex;
   justify-content: flex-end;
-  padding: 8px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -535,9 +538,125 @@ button:focus {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 8px;
 }
 .button-close:hover,
 .button-close:focus {
   background-color: var(--backlight-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 40px;
+  border: none;
+}
+.form-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--main-color);
+}
+.form-box {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+.form-box label {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--third-color);
+  padding-bottom: 4px;
+}
+.form-box input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 40px;
+  margin-bottom: 10px;
+  padding: 0;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-box input:hover {
+  border: 1px solid var(--backlight-color);
+}
+.form-box input:focus {
+  border: 1px solid var(--backlight-color);
+}
+.form-box textarea {
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+}
+.form-box textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-terms {
+  display: inline-block;
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--third-color);
+}
+.form-terms-links {
+  color: var(--backlight-color);
+  text-decoration: underline;
+}
+.form-button-send {
+  display: flex;
+  justify-content: center;
+}
+.border-footer {
+  display: flex;
+  gap: 12px;
+}
+.mail-text {
+  padding: 15px, 15px, 33px, 34px;
+}
+.border-mail {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  padding-left: 16px;
+  background-color: var(--principal-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.border-mail:hover,
+.border-mail:focus {
+  background-color: var(--backlight-color);
+}
+.border-mail::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.border-mail:hover::placeholder {
+  color: var(--background-color);
+}
+.mail-text:focus::placeholder {
+  color: var(--background-color);
+}
+
+.button-send {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.send-icon {
+  fill: currentColor;
 }
