--- a/css/styles.css
+++ b/css/styles.css
@@ -580,8 +580,9 @@ button:focus {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   height: 40px;
+  width: 448px;
   margin-bottom: 10px;
-  padding: 0;
+  padding: 0 0 0 42px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-box input:hover {
@@ -590,17 +591,40 @@ button:focus {
 .form-box input:focus {
   border: 1px solid var(--backlight-color);
 }
+.form-box input:focus-visible {
+  border: 1px solid var(--backlight-color);
+}
 .form-box textarea {
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
   resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-box textarea:hover {
+  border: 1px solid var(--backlight-color);
+}
+.form-box textarea:focus {
+  border: 1px solid var(--backlight-color);
 }
 .form-box textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
+.form-icon {
+  position: relative;
+}
 
+.form-icon-svg {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  fill: var(--main-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-icon-svg:hover {
+  fill: var(--backlight-color);
+}
 .form-terms {
   display: inline-block;
   text-align: center;
