--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,7 @@ a {
 .gallery-img:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  outline: none;
 }
 .gallery-box {
   position: relative;
@@ -614,6 +615,7 @@ a {
   border-radius: 4px;
   padding: 12px 16px;
   resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-text:hover {
   border-color: var(--backlight-color);
