--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ a {
 }
 .social-footer {
   margin-left: 70px;
-  margin-right: 78px;
+  margin-right: auto;
 }
 .back-icon-footer {
   box-sizing: form-box;
@@ -512,6 +512,7 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 40px;
 }
 .is-hidden {
   opacity: 0;
@@ -543,17 +544,16 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-close:hover,
 .button-close:focus {
   outline: none;
   background-color: var(--backlight-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form {
   display: flex;
   flex-direction: column;
-  margin: 40px;
   border: none;
 }
 .form-box {
@@ -580,20 +580,21 @@ a {
   letter-spacing: 0.01em;
   color: var(--third-color);
   gap: 4px;
+  margin-bottom: 10px;
 }
 .form-input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   height: 40px;
   width: 100%;
-  margin-bottom: 10px;
+
   padding: 0 0 0 42px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-icon-svg {
   position: absolute;
   left: 12px;
-  top: 28px;
+  top: 50%;
   fill: var(--main-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
